css changes, fixes, proper alignments...

--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -53,6 +53,7 @@
 }
 .Activities__person--proflie {
   display: grid;
+  align-items: center;
   grid-template-columns: auto auto;
   margin-left: auto;
   grid-gap: 20px;
@@ -122,6 +123,7 @@
   .Activities__person--proflie img {
     height: 39px;
     width: 39px;
+    justify-self: end;
   }
 }
 
